--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
-  "name": "whats-element",
-  "version": "2.3.1",
-  "description": "a tool can compute a unique string identity id to location everyone element in web page.",
-  "main": "index.js",
-  "scripts": {
-    "preinstall": "npm install",
-    "publish": "npm publish",
-    "build": "gulp release",
-    "dev": "gulp watch"
-  },
-  "keywords": [
-    "identifier",
-    "element",
-    "id"
-  ],
-  "author": "rowthan",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rowthan/whats-element.git"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "babelify": "^10.0.0",
-    "browserify": "^16.2.3",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-watch": "^4.3.11",
-    "gulp-zip": "^4.2.0",
-    "pump": "^2.0.0",
-    "vinyl-buffer": "^1.0.1",
-    "event-stream": "^4.0.1",
-    "vinyl-source-stream": "^2.0.0"
-  }
+	"name": "whats-element-compat",
+	"version": "1.0.0",
+	"description": "a tool can compute a unique string identity id to location everyone element in web page.",
+	"main": "lib/index.min.js",
+	"scripts": {
+		"prepublishOnly": "npm run build",
+		"build": "./node_modules/.bin/rollup --config",
+		"release": "node ./release.js"
+	},
+	"keywords": [
+		"identifier",
+		"element",
+		"id"
+	],
+	"author": "rowthan",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/wstreet/whats-element"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.16.0",
+		"@babel/preset-env": "^7.16.4",
+		"@rollup/plugin-babel": "^5.3.0",
+		"rollup": "^2.61.0",
+		"rollup-plugin-terser": "^7.0.2",
+		"semver": "^7.3.5"
+	}
 }
